@@ -79,6 +79,8 @@ func TestGetUrl(t *testing.T) {
 		"http://localhost/":    "http://localhost:9200/",
 
 		// no schema + hostname
+		"33f3600fd5c1bb599af557c36a4efb08.host":       "http://33f3600fd5c1bb599af557c36a4efb08.host:9200",
+		"33f3600fd5c1bb599af557c36a4efb08.host:12345": "http://33f3600fd5c1bb599af557c36a4efb08.host:12345",
 		"localhost":        "http://localhost:9200",
 		"localhost:80":     "http://localhost:80",
 		"localhost:80/":    "http://localhost:80/",
