@@ -45,6 +45,7 @@ https://github.com/elastic/beats/compare/v5.3.0...master[Check the HEAD diff]
 *Affecting all Beats*
 
 - Update index mappings to support future Elasticsearch 6.X. {pull}3778[3778]
+- Fix potential elasticsearch output URL parsing error if protocol scheme is missing. {pull}3671[3671]
 
 *Filebeat*
 
